added some changes in file

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <section class="primary-features-section plus-jakarta">
     <div class="features-container">
         <div class="features-header">
-            <span class="features-badge">Our Main Features</span>
+            <span class="badge plus-jakarta">Our Main Features</span>
             <h2 class="features-title">Our Primary Features</h2>
             <p class="features-description">
                 Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt eget nullam non nisi. Nisi porta lorem mollis aliquam ut porttitor leo.
@@ -273,7 +273,7 @@
 <section class="testimonials-section plus-jakarta">
     <div class="testimonials-container">
         <div class="testimonials-header">
-            <span class="testimonials-tag">Testimonials</span>
+            <span class="badge plus-jakarta">Testimonials</span>
             <h2 class="testimonials-title">What People Say</h2>
             <p class="testimonials-subtitle">You can visit our office anytime but please don't stalk us or don't be creepy.</p>
         </div>
@@ -438,7 +438,7 @@
 <section class="office-section plus-jakarta">
     <div class="office-container">
         <div class="office-header">
-            <span class="office-tag">Visit Us Anytime</span>
+            <span class="badge plus-jakarta">Visit Us Anytime</span>
             <h2 class="office-title">Our Office</h2>
             <p class="office-subtitle">You can visit our office anytime but please don't stalk us or don't be creepy.</p>
         </div>
@@ -490,7 +490,7 @@
 <section class="faq-section plus-jakarta">
     <div class="faq-container">
         <div class="faq-header">
-            <span class="faq-tag">FAQ</span>
+            <span class="badge plus-jakarta">FAQ</span>
             <h2 class="faq-title">Frequently Asked Questions</h2>
             <p class="faq-subtitle">
                 Fermentum iaculis eu non diam phasellus vestibulum. Volutpat commodo sed egestas egestas 
